REG: do not use conda update all since it updates numba to broken version 0.23.1

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,7 +22,7 @@ install:
   - pip install https://github.com/uvemas/ViTables/archive/v2.1.zip
   - pip install https://github.com/walac/pyusb/archive/master.zip
   - conda update conda --yes
-  - conda update --all --yes
+  # - conda update --all --yes
   - conda info -a
   - conda list
   # pyBAR installation including additional specific packages
