--- a/pybar/dut_configuration_mio.yaml
+++ b/pybar/dut_configuration_mio.yaml
@@ -10,6 +10,9 @@ TLU:
     TRIGGER_SELECT      : 0  # Selecting trigger input: RX2 (TDC loop-through) (8), RX1 (4), RX0 (2), MonHit/HitOR from Adapter Card (1), disabled (0)
     TRIGGER_INVERT      : 0  # Inverting trigger input: RX2 (TDC loop-through) (8), RX1 (4), RX0 (2), MonHit/HitOR from Adapter Card (1), disabled (0)
     TRIGGER_VETO_SELECT : 1  # Selecting trigger veto: RX1 (2), RX FIFO full (1), disabled (0)
+    TRIGGER_HANDSHAKE_ACCEPT_WAIT_CYCLES : 3 
+    TRIGGER_DATA_DELAY : 0  # Depends on the cable length and should be adjusted (run tune_tlu.py)
+    TRIGGER_CLOCK_CYCLES : 0  # Only 0 works at the moment
 
 # TDC for high precision charge measurements
 TDC:
