--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ install:
   # Miniconda setup + necessary external packages
   - set PATH=C:\Miniconda;C:\Miniconda\Scripts;%PATH%  # miniconda is already installed on appveyor: https://github.com/appveyor/ci/issues/359
   - conda install --yes bitarray cython ipython matplotlib mock nose numpy pandas pyserial pytables pyyaml pyzmq scipy sphinx pywin32 numba=0.22.1
-  - pip install progressbar-latest pyvisa pyvisa-py pixel_clusterizer
+  - pip install progressbar-latest pyvisa pyvisa-py
   - pip install https://github.com/SiLab-Bonn/pyqtgraph/archive/develop.zip  # pyqtgraph is not working with numpy 1.10 right now, install our fixed fork instead
   - pip install https://github.com/uvemas/ViTables/archive/v2.1.zip
   - pip install https://github.com/walac/pyusb/archive/master.zip
@@ -27,7 +27,8 @@ install:
   - conda list
   # pyBAR installation including additional specific packages
   - pip install pySiLibUSB
-  - pip install basil_daq
+  - pip install basil_daq==2.4.2
+  - pip install pixel_clusterizer==2.3.0
   - python.exe setup.py develop
 
 test_script:
