--- a/pybar/dut_configuration_seabas2.yaml
+++ b/pybar/dut_configuration_seabas2.yaml
@@ -7,10 +7,12 @@ ETH:
 
 # Trigger
 TLU:
-    TRIGGER_MODE        : 0  # Selecting trigger mode: Use trigger inputs/trigger select (0), TLU no handshake (1), TLU simple handshake (2), TLU data handshake (3)
-    TRIGGER_SELECT      : 0  # Selecting trigger input: NIM_IN_3 (8), NIM_IN_2 (4), NIM_IN_1 (2), NIM_IN_0 (1), disabled (0)
-    TRIGGER_INVERT      : 0  # Inverting trigger input: NIM_IN_3 (8), NIM_IN_2 (4), NIM_IN_1 (2), NIM_IN_0 (1), disabled (0)
-    TRIGGER_VETO_SELECT : 255  # Selecting trigger veto: RX FIFO full (1), disabled (0)
+    TRIGGER_MODE                         : 0  # Selecting trigger mode: Use trigger inputs/trigger select (0), TLU no handshake (1), TLU simple handshake (2), TLU data handshake (3)
+    TRIGGER_SELECT                       : 0  # Selecting trigger input: NIM_IN_3 (8), NIM_IN_2 (4), NIM_IN_1 (2), NIM_IN_0 (1), disabled (0)
+    TRIGGER_INVERT                       : 0  # Inverting trigger input: NIM_IN_3 (8), NIM_IN_2 (4), NIM_IN_1 (2), NIM_IN_0 (1), disabled (0)
+    TRIGGER_VETO_SELECT                  : 255  # Selecting trigger veto: RX FIFO full (1), disabled (0)
+    TRIGGER_HANDSHAKE_ACCEPT_WAIT_CYCLES : 3  # increase minimum trigger length
+    TRIGGER_DATA_DELAY                   : 0  # Depends on the cable length and should be adjusted (run scan/tune_tlu.py)
 
 # FE-I4 command ouput
 CMD:
