--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - conda update --yes conda
   - conda config --add channels silab
   - conda info -a
-  - conda create --yes -n test-environment numpy cython pytables scipy matplotlib pandas pyserial bitarray nose pyzmq pyyaml numba=0.22.1
+  - conda create --yes -n test-environment numpy pytables scipy matplotlib pandas pyserial bitarray nose pyzmq pyyaml numba=0.22.1
   - source activate test-environment
   - pip install progressbar-latest pyvisa pyvisa-py mock sphinx pixel_clusterizer
   - pip install https://github.com/SiLab-Bonn/pyqtgraph/archive/develop.zip  # pyqtgraph is not working with numpy 1.10 right now, install our fixed fork instead
@@ -35,8 +35,8 @@ before_install:
 install:
   - pip install https://github.com/walac/pyusb/archive/master.zip
   - pip install pySiLibUSB
-  - if [ "$TRAVIS_BRANCH" == "master" ]; then pip pip install basil_daq==2.4.2 pixel_clusterizer==2.3.0; fi
-  - if [ "$TRAVIS_BRANCH" == "development" ]; then pip install basil_daq==2.4.2 pixel_clusterizer==2.3.0; fi
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then pip pip install basil_daq==2.4.2 pixel_clusterizer==2.3.0 pyBAR_fei4_interpreter==1.1; fi
+  - if [ "$TRAVIS_BRANCH" == "development" ]; then pip install basil_daq==2.4.2 pixel_clusterizer==2.3.0 pyBAR_fei4_interpreter==1.1; fi
   - sudo apt-get install -qq iverilog-daily
 #  Build iverilog from source
 #  - sudo apt-get install gperf
