--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,8 @@ before_install:
 install:
   - pip install https://github.com/walac/pyusb/archive/master.zip
   - pip install pySiLibUSB
-  - if [ "$TRAVIS_BRANCH" == "master" ]; then pip pip install basil_daq==2.4.2 pixel_clusterizer==2.3.0 pyBAR_fei4_interpreter==1.1; fi
-  - if [ "$TRAVIS_BRANCH" == "development" ]; then pip install basil_daq==2.4.2 pixel_clusterizer==2.3.0 pyBAR_fei4_interpreter==1.1; fi
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then pip pip install basil_daq==2.4.2 pixel_clusterizer pyBAR_fei4_interpreter; fi
+  - if [ "$TRAVIS_BRANCH" == "development" ]; then pip install basil_daq==2.4.2 pixel_clusterizer pyBAR_fei4_interpreter; fi
   - sudo apt-get install -qq iverilog-daily
 #  Build iverilog from source
 #  - sudo apt-get install gperf
