MAINT: use from scikit-learn

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ progressbar-latest>=2.4
 tables
 pyyaml
 scipy
+scikit-learn
 
 # Additional functionality (lab devices, unit tests, Online Monitor)
 pyvisa # interface to lab devices
