MAINT: fix test path

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,4 +47,4 @@ install:
   - python setup.py develop
 # Run test
 script:
-- cd tests; nosetests test_analysis.py test_interface.py # --logging-level=INFO
+- cd pybar/testing; nosetests test_analysis.py test_interface.py # --logging-level=INFO
