--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,8 +28,9 @@ install:
   # pyBAR installation including additional specific packages
   - pip install pySiLibUSB
   - pip install basil_daq==2.4.2
-  - pip install pixel_clusterizer
-  - pip install pyBAR_fei4_interpreter
+  # - pip install pyBAR_fei4_interpreter
+  - pip install git+https://github.com/SiLab-Bonn/pyBAR_fei4_interpreter@1.2.0
+  - pip install pixel_clusterizer==2.5.0
   - python.exe setup.py develop
 
 test_script:
