--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ install:
   - pip install https://github.com/walac/pyusb/archive/master.zip
   - pip install pySiLibUSB
   - if [ "$TRAVIS_BRANCH" == "master" ]; then pip pip install basil_daq==2.4.2 pixel_clusterizer pyBAR_fei4_interpreter; fi
-  - if [ "$TRAVIS_BRANCH" == "development" ]; then pip install basil_daq==2.4.2 git+https://github.com/SiLab-Bonn/pyBAR_fei4_interpreter@1.2.0 pixel_clusterizer==2.5.0 pyBAR_fei4_interpreter; fi
+  - if [ "$TRAVIS_BRANCH" == "development" ]; then pip install basil_daq==2.4.2 git+https://github.com/SiLab-Bonn/pyBAR_fei4_interpreter@1.2.0 pixel_clusterizer==2.5.0; fi
   - sudo apt-get install -qq iverilog-daily
 #  Build iverilog from source
 #  - sudo apt-get install gperf
