--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ before_install:
   - conda create --yes -n test-environment numpy cython pytables scipy matplotlib pandas pyserial bitarray nose pyzmq pyyaml numba
   - source activate test-environment
   - pip install progressbar-latest pyvisa pyvisa-py mock sphinx
-  - pip install git+https://github.com/pyqtgraph/pyqtgraph.git@develop
+  # - pip install git+https://github.com/pyqtgraph/pyqtgraph.git@develop
+  - pip install git+https://github.com/SiLab-Bonn/pyqtgraph.git@develop # keeping this fork until release 0.9.11
   - pip install https://github.com/uvemas/ViTables/archive/v2.1.zip
   - wget -O cocotb-master.zip https://github.com/potentialventures/cocotb/archive/master.zip 
   - unzip cocotb-master.zip
